# leanr-opengl

./: CMakeLists.txt
include/glad/: glad.h
src/: glad.c  hello_rectangle.cpp  hello_triangle.cpp  hello_window.cpp  load_texture.cpp  main.cpp  shader_s.cpp
